--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <input type="email" id="correo" name="correo" required>
     <br/>
     <button type="submit">Enviar</button>
+    <br/>
+    <a href="/contactos.html">Ir a Contactos</a>
   </form>
 </body>
 </html>
